@@ -62,38 +62,38 @@
 /* entity types */
 
 #define VLAD_IDENT_ENT_SUB_SIN       \
-  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_SIN)
+  (VLAD_IDENT_MASK_ENT | VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_SIN)
 #define VLAD_IDENT_ENT_ACC_SIN       \
-  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_SIN)
+  (VLAD_IDENT_MASK_ENT | VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_SIN)
 #define VLAD_IDENT_ENT_OBJ_SIN       \
-  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_SIN)
+  (VLAD_IDENT_MASK_ENT | VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_SIN)
 #define VLAD_IDENT_ENT_SUB_GRP       \
-  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_GRP)
+  (VLAD_IDENT_MASK_ENT | VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_GRP)
 #define VLAD_IDENT_ENT_ACC_GRP       \
-  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_GRP)
+  (VLAD_IDENT_MASK_ENT | VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_GRP)
 #define VLAD_IDENT_ENT_OBJ_GRP       \
-  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_GRP)
+  (VLAD_IDENT_MASK_ENT | VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_GRP)
 
 /* variable types */
 
 #define VLAD_IDENT_VAR_SUB           \
-  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
+  (VLAD_IDENT_MASK_VAR | VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_GRP)
 #define VLAD_IDENT_VAR_ACC           \
-  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
+  (VLAD_IDENT_MASK_VAR | VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_GRP)
 #define VLAD_IDENT_VAR_OBJ           \
-  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
+  (VLAD_IDENT_MASK_VAR | VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_GRP)
 #define VLAD_IDENT_VAR_SUB_SIN       \
-  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_VAR)
+  (VLAD_IDENT_MASK_VAR | VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_SIN)
 #define VLAD_IDENT_VAR_ACC_SIN       \
-  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_VAR)
+  (VLAD_IDENT_MASK_VAR | VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_SIN)
 #define VLAD_IDENT_VAR_OBJ_SIN       \
-  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_SIN | VLAD_IDENT_MASK_VAR)
+  (VLAD_IDENT_MASK_VAR | VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_SIN)
 #define VLAD_IDENT_VAR_SUB_GRP       \
-  (VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
+  (VLAD_IDENT_MASK_VAR | VLAD_IDENT_MASK_SUB | VLAD_IDENT_MASK_GRP)
 #define VLAD_IDENT_VAR_ACC_GRP       \
-  (VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
+  (VLAD_IDENT_MASK_VAR | VLAD_IDENT_MASK_ACC | VLAD_IDENT_MASK_GRP)
 #define VLAD_IDENT_VAR_OBJ_GRP       \
-  (VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_GRP | VLAD_IDENT_MASK_VAR)
+  (VLAD_IDENT_MASK_VAR | VLAD_IDENT_MASK_OBJ | VLAD_IDENT_MASK_GRP)
 
 /* total number of types */
 
