@@ -1,3 +1,13 @@
+2005-12-30  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
+
+	* Merged with vlad-1_4_1
+
+	* Tagged vlad-1_4_1
+
+	* lib/identifier.h :
+
+	  - VLAD_IDENT_ENT was not part of the entity types.
+
 2005-12-28  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
 	* Tagged vlad-1_4_0
